changed CRLF to LF

--- a/docker/Dockerfile.celery
+++ b/docker/Dockerfile.celery
@@ -1,4 +1,5 @@
-FROM python:3.11.1-bullseye
+FROM python:3.10.9-buster
+
 
 WORKDIR /usr/src/app
 
@@ -14,12 +15,13 @@ RUN apt update
 COPY backend/ebooking/ /usr/src/app/
 
 # Copy entrypoint script to container
-COPY docker/entrypoint_celery.sh .
+COPY docker/entrypoint_celery.sh /usr/src/app/
 # Solve Python dependencies
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 RUN sed -i -e 's/\r$//' entrypoint_celery.sh
+
 
 # Run entrypoint script
 ENTRYPOINT ["./docker/entrypoint_celery.sh"]
