--- a/backend/ebooking/requirements.txt
+++ b/backend/ebooking/requirements.txt
@@ -2,3 +2,9 @@ asgiref==3.6.0
 Django==4.1.5
 sqlparse==0.4.3
 tzdata==2022.7
+bootstrap4==0.1.0
+celery==5.2.3
+redis==4.2.0
+bootstrap4==0.1.0
+psycopg2-binary
+django-bootstrap4
