--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -112,3 +112,11 @@ services:
       - POSTGRES_PASSWORD=postgres
     hostname: db_postgres
     container_name: db_postgres
+  
+  test_email_server:
+    image: mailhog/mailhog
+    ports:
+      - "1025:1025"
+      - "8025:8025"
+    depends_on:
+    - django_dev
