--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,8 +9,12 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile.dev.django
+    expose:
+      - 1025
+      - 8025
+      - 587  
     ports:
-      - "127.0.0.1:8000:8000"
+      - "0.0.0.0:8000:8000"
     volumes:
       - .:/usr/src/app/
       - /tmp:/tmp
@@ -44,6 +48,7 @@ services:
       - POSTGRES_NAME=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+
     depends_on:
       - celery_worker
 
@@ -112,3 +117,14 @@ services:
       - POSTGRES_PASSWORD=postgres
     hostname: db_postgres
     container_name: db_postgres
+  
+  test_email_server:
+    image: mailhog/mailhog
+    # expose:
+    #   - 1025
+    #   - 8025
+    #   - 587
+    ports:
+    - '1025:1025'
+    - '8025:8025'
+    - '587:587'
