--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -112,7 +112,7 @@ services:
       context: .
       dockerfile: docker/Dockerfile.local_db1
     volumes:
-      - ./docker/entrypoint_localdb_1.sh:/docker-entrypoint-initdb.d/local_db1.sql
+      # - ./docker/entrypoint_localdb_1.sh:/docker-entrypoint-initdb.d/local_db1.sql
       - ./data/local_db1:/var/lib/postgresql/data
     ports:
       - 5432:5432
@@ -120,7 +120,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: hotelsdb
-      POSTGRES_HOST: local_db1
+      POSTGRES_HOST: localhost
       POSTGRES_PORT: 5432
       TZ: Europe/Bucharest
       PGTZ: Europe/Bucharest
@@ -139,7 +139,7 @@ services:
       context: .
       dockerfile: docker/Dockerfile.local_db2
     volumes:
-      - ./docker/entrypoint_localdb_1.sh:/docker-entrypoint-initdb.d/local_db2.sql
+      # - ./docker/entrypoint_localdb_1.sh:/docker-entrypoint-initdb.d/local_db2.sql
       - ./data/local_db2:/var/lib/postgresql/data
     ports:
       - 5433:5432
@@ -147,7 +147,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: hotelsdb
-      POSTGRES_HOST: local_db2
+      POSTGRES_HOST: localhost
       POSTGRES_PORT: 5432
       TZ: Europe/Bucharest
       PGTZ: Europe/Bucharest
