--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .idea/
 *.pyc 
 /*/migrations/*
+docker/
 ebooking/secrets.json
 ebooking/hotels/migrations
 ebooking/hotels/migrations/*
@@ -10,3 +11,4 @@ ebooking/reservation/migrations/*
 ebooking/reservation/migrations
 data/
 data/*
+docker/**/*.sh
