--- a/ebooking/requirements.txt
+++ b/ebooking/requirements.txt
@@ -1,9 +1,9 @@
-asgiref==3.6.0
-Django==4.1.5
-sqlparse==0.4.3
-tzdata==2022.7
-celery==5.2.3
-redis==4.2.0
+asgiref
+Django
+sqlparse
+tzdata
+celery
+redis
 django-bootstrap5
 Pillow
 psycopg2-binary
