chanign yml file

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,9 +13,11 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.9]
 
     steps:
+    - name: List files in checked out directory
+      run: ls -R
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
@@ -24,7 +26,9 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ebooking/requirements.txt
+        cd ebooking
+        pip install -r requirements.txt
     - name: Run Tests
       run: |
-        coverage run ebooking/manage.py test
+        cd ebooking
+        coverage run manage.py test
